[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Menu.png" type="Texture" id=1]
[ext_resource path="res://Menu Scene.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sound2Ambience.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/star1.png" type="Texture" id=4]
[ext_resource path="res://Assets/star2.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Menu Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Menu" type="Sprite" parent="."]
position = Vector2( 516, 302 )
scale = Vector2( 1.07031, 1.04667 )
texture = ExtResource( 1 )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0
autoplay = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 560.25, 71.9737 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 16, 176 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 648, 16 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
playing = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 1008, 8 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
playing = true

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 848, 464 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite6" type="AnimatedSprite" parent="."]
position = Vector2( 656, 304 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite7" type="AnimatedSprite" parent="."]
position = Vector2( 248, 264 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite8" type="AnimatedSprite" parent="."]
position = Vector2( 1008, 272 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
playing = true

[node name="AnimatedSprite9" type="AnimatedSprite" parent="."]
position = Vector2( 336, 56 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
playing = true

[node name="AnimatedSprite10" type="AnimatedSprite" parent="."]
position = Vector2( 816, 72 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite11" type="AnimatedSprite" parent="."]
position = Vector2( 8, 560 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite12" type="AnimatedSprite" parent="."]
position = Vector2( 248, 456 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
playing = true

[node name="AnimatedSprite13" type="AnimatedSprite" parent="."]
position = Vector2( 592, 456 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
playing = true

[node name="AnimatedSprite14" type="AnimatedSprite" parent="."]
position = Vector2( 1008, 520 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite15" type="AnimatedSprite" parent="."]
position = Vector2( 56, 328 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
playing = true

[node name="AnimatedSprite16" type="AnimatedSprite" parent="."]
position = Vector2( 456, 328 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
playing = true

[node name="AnimatedSprite17" type="AnimatedSprite" parent="."]
position = Vector2( 824, 328 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite18" type="AnimatedSprite" parent="."]
position = Vector2( 48, 16 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
playing = true

[node name="AnimatedSprite19" type="AnimatedSprite" parent="."]
position = Vector2( 440, 200 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="AnimatedSprite20" type="AnimatedSprite" parent="."]
position = Vector2( 944, 136 )
scale = Vector2( 0.0206252, 0.0200156 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Start" type="Button" parent="."]
margin_left = 64.0
margin_top = 368.0
margin_right = 256.0
margin_bottom = 432.0
text = "Let's save something"

[node name="Quit" type="Button" parent="."]
margin_left = 64.0
margin_top = 448.0
margin_right = 256.0
margin_bottom = 512.0
text = "Not now"

[node name="Lore" type="Button" parent="."]
margin_left = 280.0
margin_top = 368.0
margin_right = 472.0
margin_bottom = 432.0
text = "About You"

[node name="Us" type="Button" parent="."]
margin_left = 280.0
margin_top = 448.0
margin_right = 472.0
margin_bottom = 512.0
text = "About Us"

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Lore" to="." method="_on_Lore_pressed"]
[connection signal="pressed" from="Us" to="." method="_on_Us_pressed"]
